'Finalizado o primeiro box contendo a logo e os icons

--- a/index.html
+++ b/index.html
@@ -3,12 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Fylo data storage component</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   
+  <div class="container">
+    <div class="box-1">
+      <div class="content">
+        <div class="logo">
+          <img src="images/logo.svg" alt="logo-site">
+        </div>
+        
+        <div class="icons">
+          <div class="icon">
+            <img src="images/icon-document.svg" alt="">
+          </div>
+          <div class="icon">
+            <img src="images/icon-folder.svg" alt="">
+          </div>
+          <div class="icon">
+            <img src="images/icon-upload.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="box-2">
+
+    </div>
+  </div>
 
   <footer>
     <div class="attribution">
