Finalizado o segundo box junto com seus atributos

--- a/index.html
+++ b/index.html
@@ -10,30 +10,44 @@
 </head>
 <body>
   
-  <div class="container">
-    <div class="box-1">
-      <div class="content">
-        <div class="logo">
-          <img src="images/logo.svg" alt="logo-site">
+  <section>
+    <div class="container">
+      <div class="box-1">
+        <div class="content">
+          <div class="logo">
+            <img src="images/logo.svg" alt="logo-site">
+          </div>
+
+          <div class="icons">
+            <div class="icon">
+              <img src="images/icon-document.svg" alt="">
+            </div>
+            <div class="icon">
+              <img src="images/icon-folder.svg" alt="">
+            </div>
+            <div class="icon">
+              <img src="images/icon-upload.svg" alt="">
+            </div>
+          </div>
         </div>
-        
-        <div class="icons">
-          <div class="icon">
-            <img src="images/icon-document.svg" alt="">
+      </div>
+      <div class="box-2">
+        <div class="content">
+          <div class="bytes-remaining"><span>185</span> GB Left</div>
+          <h1>You’ve used <span> 815 GB </span> of your storage</h1>
+          <div class="data-bar">
+            <div class="bar">
+              <div class="boll"></div>
+            </div>
           </div>
-          <div class="icon">
-            <img src="images/icon-folder.svg" alt="">
-          </div>
-          <div class="icon">
-            <img src="images/icon-upload.svg" alt="">
+          <div class="bytes">
+            <h2>0 GB</h2>
+            <h2>1000 GB</h2>
           </div>
         </div>
       </div>
     </div>
-    <div class="box-2">
-
-    </div>
-  </div>
+  </section>
 
   <footer>
     <div class="attribution">
@@ -47,14 +61,9 @@
 
 
 
-
-
 <!--
-You’ve used 815 GB of your storage
+
 
 185 GB Left
-
-0 GB
-1000 GB
 
 -->
