Inserido algumas funções de responsividade

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       </div>
       <div class="box-2">
         <div class="content">
-          <div class="bytes-remaining"><span>185</span> GB Left</div>
+          <div class="bytes-remaining">
+            <span>185</span> GB Left
+          </div>
           <h1>You’ve used <span> 815 GB </span> of your storage</h1>
           <div class="data-bar">
             <div class="bar">
