--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <title>Fylo data storage component</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -60,12 +60,3 @@
 
 </body>
 </html>
-
-
-
-<!--
-
-
-185 GB Left
-
--->
